--- a/docs/comparison/jpsi2pipipi.ipynb
+++ b/docs/comparison/jpsi2pipipi.ipynb
@@ -262,28 +262,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": [
-     "hide-input"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "masses = {\n",
-    "    symbol: sp.sympify(value)\n",
-    "    for symbol, value in DPD_MODEL.parameter_defaults.items()\n",
-    "    if symbol.name.startswith(\"m\")\n",
-    "    if len(symbol.name) == 2\n",
-    "}\n",
-    "Latex(aslatex(masses))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
@@ -374,9 +352,9 @@
    "outputs": [],
    "source": [
     "p1, p2, p3 = tuple(FourMomentumSymbol(f\"p{i}\", shape=[]) for i in (0, 1, 2))\n",
-    "s1, s2, s3 = sp.symbols(\"sigma1:4\", nonnegative=True)\n",
+    "s1, s2, s3 = sorted(DPD_MODEL.invariants, key=str)\n",
     "mass_definitions = {\n",
-    "    **masses,\n",
+    "    **DPD_MODEL.masses,\n",
     "    s1: InvariantMass(p2 + p3) ** 2,\n",
     "    s2: InvariantMass(p1 + p3) ** 2,\n",
     "    s3: InvariantMass(p1 + p2) ** 2,\n",
