BREAK: rename `get_particle()` to `to_particle()`

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -44,7 +44,7 @@
     "from tensorwaves.data.transform import SympyDataTransformer\n",
     "from tqdm.auto import tqdm\n",
     "\n",
-    "from ampform_dpd import DalitzPlotDecompositionBuilder, get_particle\n",
+    "from ampform_dpd import DalitzPlotDecompositionBuilder, to_particle\n",
     "from ampform_dpd.adapter.qrules import normalize_state_ids, to_three_body_decay\n",
     "from ampform_dpd.decay import IsobarNode, Particle, ThreeBodyDecayChain\n",
     "from ampform_dpd.dynamics import FormFactor, RelativisticBreitWigner\n",
@@ -257,11 +257,11 @@
     "    )\n",
     "    parameter_defaults = {\n",
     "        meson_radius: 1,\n",
-    "        outgoing_state_mass1: get_particle(isobar.child1).mass,\n",
-    "        outgoing_state_mass2: get_particle(isobar.child2).mass,\n",
+    "        outgoing_state_mass1: to_particle(isobar.child1).mass,\n",
+    "        outgoing_state_mass2: to_particle(isobar.child2).mass,\n",
     "    }\n",
     "    if not inv_mass.name.startswith(\"s\"):\n",
-    "        parameter_defaults[inv_mass] = get_particle(isobar).mass\n",
+    "        parameter_defaults[inv_mass] = to_particle(isobar).mass\n",
     "    return form_factor, parameter_defaults\n",
     "\n",
     "\n",
@@ -294,13 +294,13 @@
     "\n",
     "\n",
     "def _create_meson_radius_symbol(isobar: IsobarNode) -> sp.Symbol:\n",
-    "    if get_particle(isobar).name == \"J/psi(1S)\":\n",
+    "    if to_particle(isobar).name == \"J/psi(1S)\":\n",
     "        return sp.Symbol(R\"R_{J/\\psi}\")\n",
     "    return sp.Symbol(R\"R_\\mathrm{res}\")\n",
     "\n",
     "\n",
     "def _create_mass_symbol(particle: IsobarNode | Particle) -> sp.Symbol:\n",
-    "    particle = get_particle(particle)\n",
+    "    particle = to_particle(particle)\n",
     "    return sp.Symbol(f\"m_{{{particle.latex}}}\", nonnegative=True)\n",
     "\n",
     "\n",
