--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -33,7 +33,7 @@
     "import sympy as sp\n",
     "from IPython.display import Latex, Markdown\n",
     "\n",
-    "from ampform_dpd import DalitzPlotDecompositionBuilder, get_particle\n",
+    "from ampform_dpd import DalitzPlotDecompositionBuilder, to_particle\n",
     "from ampform_dpd.adapter.qrules import (\n",
     "    load_particles,\n",
     "    normalize_state_ids,\n",
@@ -234,7 +234,7 @@
     "\n",
     "\n",
     "def _create_mass_symbol(particle: IsobarNode | Particle) -> sp.Symbol:\n",
-    "    particle = get_particle(particle)\n",
+    "    particle = to_particle(particle)\n",
     "    return sp.Symbol(f\"m_{{{particle.latex}}}\", nonnegative=True)\n",
     "\n",
     "\n",
