FEAT: extract `dynamics.builder` functions

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -44,10 +44,10 @@
     "from tensorwaves.data.transform import SympyDataTransformer\n",
     "from tqdm.auto import tqdm\n",
     "\n",
-    "from ampform_dpd import DalitzPlotDecompositionBuilder, to_particle\n",
+    "from ampform_dpd import DalitzPlotDecompositionBuilder\n",
     "from ampform_dpd.adapter.qrules import normalize_state_ids, to_three_body_decay\n",
-    "from ampform_dpd.decay import IsobarNode, Particle, ThreeBodyDecayChain\n",
     "from ampform_dpd.dynamics import FormFactor, RelativisticBreitWigner\n",
+    "from ampform_dpd.dynamics.builder import formulate_breit_wigner_with_form_factor\n",
     "from ampform_dpd.io import (\n",
     "    as_markdown_table,\n",
     "    aslatex,\n",
@@ -164,173 +164,6 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Lineshapes for dynamics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    ":::{note}\n",
-    "As opposed to [AmpForm](https://ampform.rtfd.io), AmpForm-DPD defines dynamics over the **entire decay chain**, not a single isobar node. The dynamics classes and the corresponding builders would have to be extended to implement other dynamics lineshapes.\n",
-    ":::"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": [
-     "hide-input",
-     "full-width"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "s, m0, w0, m1, m2, L, R, z = sp.symbols(\"s m0 Gamma0 m1 m2 L R z\")\n",
-    "exprs = [\n",
-    "    RelativisticBreitWigner(s, m0, w0, m1, m2, L, R),\n",
-    "    EnergyDependentWidth(s, m0, w0, m1, m2, L, R),\n",
-    "    FormFactor(s, m1, m2, L, R),\n",
-    "    BlattWeisskopfSquared(z, L),\n",
-    "]\n",
-    "Latex(aslatex({e: e.doit(deep=False) for e in exprs}))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "mystnb": {
-     "code_prompt_show": "Define dynamics builder functions"
-    },
-    "tags": [
-     "hide-input",
-     "scroll-input"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "def formulate_breit_wigner_with_ff(\n",
-    "    decay_chain: ThreeBodyDecayChain,\n",
-    ") -> tuple[sp.Expr, dict[sp.Symbol, float]]:\n",
-    "    production_node = decay_chain.decay\n",
-    "    assert isinstance(production_node.child1, IsobarNode), \"Not a 3-body isobar decay\"\n",
-    "    decay_node = production_node.child1\n",
-    "    s = _get_mandelstam_s(decay_chain)\n",
-    "    parameter_defaults = {}\n",
-    "    production_ff, new_pars = _create_form_factor(s, production_node)\n",
-    "    parameter_defaults.update(new_pars)\n",
-    "    decay_ff, new_pars = _create_form_factor(s, decay_node)\n",
-    "    parameter_defaults.update(new_pars)\n",
-    "    breit_wigner, new_pars = _create_breit_wigner(s, decay_node)\n",
-    "    parameter_defaults.update(new_pars)\n",
-    "    return (\n",
-    "        production_ff * decay_ff * breit_wigner,\n",
-    "        parameter_defaults,\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def _create_form_factor(\n",
-    "    s: sp.Symbol, isobar: IsobarNode\n",
-    ") -> tuple[sp.Expr, dict[sp.Symbol, float]]:\n",
-    "    assert isobar.interaction is not None, \"Need LS-couplings\"\n",
-    "    if isobar.parent.name == \"J/psi(1S)\":\n",
-    "        inv_mass = sp.Symbol(\"m0\", nonnegative=True)\n",
-    "    else:\n",
-    "        inv_mass = _get_mandelstam_s(isobar)\n",
-    "    outgoing_state_mass1 = _create_mass_symbol(isobar.child1)\n",
-    "    outgoing_state_mass2 = _create_mass_symbol(isobar.child2)\n",
-    "    meson_radius = _create_meson_radius_symbol(isobar.parent)\n",
-    "    form_factor = FormFactor(\n",
-    "        s=inv_mass**2,\n",
-    "        m1=outgoing_state_mass1,\n",
-    "        m2=outgoing_state_mass2,\n",
-    "        angular_momentum=isobar.interaction.L,\n",
-    "        meson_radius=meson_radius,\n",
-    "    )\n",
-    "    parameter_defaults = {\n",
-    "        meson_radius: 1,\n",
-    "        outgoing_state_mass1: to_particle(isobar.child1).mass,\n",
-    "        outgoing_state_mass2: to_particle(isobar.child2).mass,\n",
-    "    }\n",
-    "    if not inv_mass.name.startswith(\"s\"):\n",
-    "        parameter_defaults[inv_mass] = to_particle(isobar).mass\n",
-    "    return form_factor, parameter_defaults\n",
-    "\n",
-    "\n",
-    "def _create_breit_wigner(\n",
-    "    s: sp.Symbol, isobar: IsobarNode\n",
-    ") -> tuple[sp.Expr, dict[sp.Symbol, float]]:\n",
-    "    assert isobar.interaction is not None, \"Need LS-couplings\"\n",
-    "    outgoing_state_mass1 = _create_mass_symbol(isobar.child1)\n",
-    "    outgoing_state_mass2 = _create_mass_symbol(isobar.child2)\n",
-    "    angular_momentum = isobar.interaction.L\n",
-    "    res_mass = _create_mass_symbol(isobar.parent)\n",
-    "    res_width = sp.Symbol(Rf\"\\Gamma_{{{isobar.parent.latex}}}\", nonnegative=True)\n",
-    "    meson_radius = _create_meson_radius_symbol(isobar.parent)\n",
-    "\n",
-    "    breit_wigner_expr = RelativisticBreitWigner(\n",
-    "        s=s,\n",
-    "        mass0=res_mass,\n",
-    "        gamma0=res_width,\n",
-    "        m1=outgoing_state_mass1,\n",
-    "        m2=outgoing_state_mass2,\n",
-    "        angular_momentum=angular_momentum,\n",
-    "        meson_radius=meson_radius,\n",
-    "    )\n",
-    "    parameter_defaults = {\n",
-    "        res_mass: isobar.parent.mass,\n",
-    "        res_width: isobar.parent.width,\n",
-    "        meson_radius: 1,\n",
-    "    }\n",
-    "    return breit_wigner_expr, parameter_defaults\n",
-    "\n",
-    "\n",
-    "def _create_meson_radius_symbol(isobar: IsobarNode) -> sp.Symbol:\n",
-    "    if to_particle(isobar).name == \"J/psi(1S)\":\n",
-    "        return sp.Symbol(R\"R_{J/\\psi}\")\n",
-    "    return sp.Symbol(R\"R_\\mathrm{res}\")\n",
-    "\n",
-    "\n",
-    "def _create_mass_symbol(particle: IsobarNode | Particle) -> sp.Symbol:\n",
-    "    particle = to_particle(particle)\n",
-    "    return sp.Symbol(f\"m_{{{particle.latex}}}\", nonnegative=True)\n",
-    "\n",
-    "\n",
-    "def _get_mandelstam_s(decay: ThreeBodyDecayChain | IsobarNode) -> sp.Symbol:\n",
-    "    s1, s2, s3 = sp.symbols(\"sigma1:4\", nonnegative=True)\n",
-    "    decay_products = {p.name for p in _get_decay_products(decay)}\n",
-    "    if decay_products == {\"Sigma+\", \"p~\"}:\n",
-    "        return s1\n",
-    "    if decay_products == {\"K0\", \"p~\"}:\n",
-    "        return s2\n",
-    "    if decay_products == {\"K0\", \"Sigma+\"}:\n",
-    "        return s3\n",
-    "    msg = f\"Cannot find Mandelstam variable for {', '.join(decay_products)}\"\n",
-    "    raise NotImplementedError(msg)\n",
-    "\n",
-    "\n",
-    "def _get_decay_products(\n",
-    "    decay: ThreeBodyDecayChain | IsobarNode,\n",
-    ") -> tuple[Particle, Particle]:\n",
-    "    if isinstance(decay, ThreeBodyDecayChain):\n",
-    "        return decay.decay_products\n",
-    "    return decay.children"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
     "## Model formulation"
    ]
   },
@@ -354,7 +187,7 @@
     "model_builder = DalitzPlotDecompositionBuilder(DECAY, min_ls=False)\n",
     "for chain in model_builder.decay.chains:\n",
     "    model_builder.dynamics_choices.register_builder(\n",
-    "        chain, formulate_breit_wigner_with_ff\n",
+    "        chain, formulate_breit_wigner_with_form_factor\n",
     "    )\n",
     "model = model_builder.formulate(reference_subsystem=1)\n",
     "model.intensity"
@@ -406,6 +239,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "hide-input",
+     "full-width"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "s, m0, w0, m1, m2, L, R, z = sp.symbols(\"s m0 Gamma0 m1 m2 L R z\")\n",
+    "exprs = [\n",
+    "    RelativisticBreitWigner(s, m0, w0, m1, m2, L, R),\n",
+    "    EnergyDependentWidth(s, m0, w0, m1, m2, L, R),\n",
+    "    FormFactor(s, m1, m2, L, R),\n",
+    "    BlattWeisskopfSquared(z, L),\n",
+    "]\n",
+    "Latex(aslatex({e: e.doit(deep=False) for e in exprs}))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -424,7 +281,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "unfolded_intensity_expr = perform_cached_doit(model.intensity)\n",
