--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -33,14 +33,15 @@
     "import sympy as sp\n",
     "from IPython.display import Latex, Markdown\n",
     "\n",
-    "from ampform_dpd import DalitzPlotDecompositionBuilder, to_particle\n",
+    "from ampform_dpd import DalitzPlotDecompositionBuilder\n",
     "from ampform_dpd.adapter.qrules import (\n",
     "    load_particles,\n",
     "    normalize_state_ids,\n",
     "    to_three_body_decay,\n",
     ")\n",
-    "from ampform_dpd.decay import IsobarNode, Particle, ThreeBodyDecayChain\n",
+    "from ampform_dpd.decay import ThreeBodyDecayChain\n",
     "from ampform_dpd.dynamics import BreitWignerMinL\n",
+    "from ampform_dpd.dynamics.builder import create_mass_symbol, get_mandelstam_s\n",
     "from ampform_dpd.io import as_markdown_table, aslatex, simplify_latex_rendering\n",
     "\n",
     "simplify_latex_rendering()\n",
@@ -185,6 +186,9 @@
     "jupyter": {
      "source_hidden": true
     },
+    "mystnb": {
+     "code_prompt_show": "Dynamics builder function"
+    },
     "tags": [
      "hide-input"
     ]
@@ -194,8 +198,8 @@
     "def formulate_breit_wigner(\n",
     "    decay_chain: ThreeBodyDecayChain,\n",
     ") -> tuple[BreitWignerMinL, dict[sp.Symbol, float]]:\n",
-    "    s = _get_mandelstam_s(decay_chain)\n",
-    "    child1_mass, child2_mass = map(_create_mass_symbol, decay_chain.decay_products)\n",
+    "    s = get_mandelstam_s(decay_chain.decay_node)\n",
+    "    child1_mass, child2_mass = map(create_mass_symbol, decay_chain.decay_products)\n",
     "    l_dec = sp.Rational(decay_chain.outgoing_ls.L)\n",
     "    l_prod = sp.Rational(decay_chain.incoming_ls.L)\n",
     "    parent_mass = sp.Symbol(f\"m_{{{decay_chain.parent.latex}}}\", nonnegative=True)\n",
@@ -230,36 +234,14 @@
     "        R_dec,\n",
     "        R_prod,\n",
     "    )\n",
-    "    return dynamics, parameter_defaults\n",
-    "\n",
-    "\n",
-    "def _create_mass_symbol(particle: IsobarNode | Particle) -> sp.Symbol:\n",
-    "    particle = to_particle(particle)\n",
-    "    return sp.Symbol(f\"m_{{{particle.latex}}}\", nonnegative=True)\n",
-    "\n",
-    "\n",
-    "def _get_mandelstam_s(decay: ThreeBodyDecayChain | IsobarNode) -> sp.Symbol:\n",
-    "    s1, s2, s3 = sp.symbols(\"sigma1:4\", nonnegative=True)\n",
-    "    decay_products = {p.name for p in _get_decay_products(decay)}\n",
-    "    if decay_products == {\"p\", \"pi+\"}:\n",
-    "        return s1\n",
-    "    if decay_products == {\"pi+\", \"K-\"}:\n",
-    "        return s2\n",
-    "    if decay_products == {\"K-\", \"p\"}:\n",
-    "        return s3\n",
-    "    msg = f\"Cannot find Mandelstam variable for {', '.join(decay_products)}\"\n",
-    "    raise NotImplementedError(msg)\n",
-    "\n",
-    "\n",
-    "def _get_decay_products(decay: ThreeBodyDecayChain | IsobarNode) -> list[Particle]:\n",
-    "    if isinstance(decay, ThreeBodyDecayChain):\n",
-    "        return decay.decay_products\n",
-    "    return decay.children"
+    "    return dynamics, parameter_defaults"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Model formulation"
    ]
