DOC: generalize plotting code

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -46,6 +46,7 @@
     "\n",
     "from ampform_dpd import DalitzPlotDecompositionBuilder\n",
     "from ampform_dpd.adapter.qrules import normalize_state_ids, to_three_body_decay\n",
+    "from ampform_dpd.decay import State\n",
     "from ampform_dpd.dynamics import FormFactor, RelativisticBreitWigner\n",
     "from ampform_dpd.dynamics.builder import formulate_breit_wigner_with_form_factor\n",
     "from ampform_dpd.io import (\n",
@@ -69,7 +70,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
    },
    "source": [
     "## Decay definition"
@@ -194,13 +196,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "where the angles can be computed from initial and final state masses $m_0$, $m_1$, $m_2$, and $m_3$:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -265,45 +260,13 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "tags": []
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
     "## Preparing for input data"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The {meth}`~sympy.core.basic.Basic.doit` operation can be cached to disk with {func}`~ampform.sympy.perform_cached_doit`. We do this twice, once for the unfolding of the {attr}`~.AmplitudeModel.intensity` expression and second for the substitution and unfolding of the {attr}`~.AmplitudeModel.amplitudes`. Note that we could also have unfolded the intensity and substituted the amplitudes with {attr}`~.AmplitudeModel.full_expression`, but then the unfolded {attr}`~.AmplitudeModel.intensity` expression is not cached."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "unfolded_intensity_expr = perform_cached_doit(model.intensity)\n",
-    "full_intensity_expr = perform_cached_doit(\n",
-    "    unfolded_intensity_expr.xreplace(model.amplitudes)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "With this, the remaining {class}`~sympy.core.symbol.Symbol`s in the full expression are kinematic variables.[^1]\n",
-    "\n",
-    "[^1]: Yes, there are still $\\mathcal{H}^\\mathrm{production}$ and $\\mathcal{H}^\\mathrm{decay}$, but these are the {attr}`~sympy.tensor.indexed.Indexed.base`s of the {class}`~sympy.tensor.indexed.Indexed` coupling symbols. They should **NOT** be substituted."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -313,175 +276,114 @@
    },
    "outputs": [],
    "source": [
-    "sp.Array(\n",
-    "    sorted(full_intensity_expr.free_symbols - set(model.parameter_defaults), key=str)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "The $\\theta$ and $\\zeta$ angles are defined by the {attr}`~.AmplitudeModel.variables` attribute (they are shown under {ref}`jpsi2ksp:Model formulation`). Those definitions allow us to create a converter that computes kinematic variables from masses and Mandelstam variables:"
+    "i, j = (3, 2)\n",
+    "k, *_ = {1, 2, 3} - {i, j}\n",
+    "σk, σk_expr = list(model.invariants.items())[k - 1]\n",
+    "Latex(aslatex({σk: σk_expr}))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "mystnb": {
+     "code_prompt_show": "Define meshgrid for Dalitz plot"
+    },
     "tags": [
-     "hide-output"
+     "hide-input",
+     "remove-output"
     ]
    },
    "outputs": [],
    "source": [
-    "masses_to_angles = SympyDataTransformer.from_sympy(model.variables, backend=\"jax\")\n",
-    "masses_to_angles.functions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Dalitz plot"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "The data input for this data transformer can be several things. One can compute them from a (generated) data sample of four-momenta. Or one can compute them for a Dalitz plane. We do the latter in this section.\n",
-    "\n",
-    "First, the data transformer defined above expects values for the masses. We have already defined these values above, but we need to convert them from {mod}`sympy` objects to numerical data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "dalitz_data = {str(s): float(v) for s, v in model.masses.items()}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, we define a grid of data points over Mandelstam (Dalitz) variables $\\sigma_2=m_{13}, \\sigma_3=m_{12}$:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resolution = 500\n",
+    "resolution = 1_000\n",
+    "m = sorted(model.masses, key=str)\n",
+    "x_min = float(((m[j] + m[k]) ** 2).xreplace(model.masses))\n",
+    "x_max = float(((m[0] - m[i]) ** 2).xreplace(model.masses))\n",
+    "y_min = float(((m[i] + m[k]) ** 2).xreplace(model.masses))\n",
+    "y_max = float(((m[0] - m[j]) ** 2).xreplace(model.masses))\n",
+    "x_diff = x_max - x_min\n",
+    "y_diff = y_max - y_min\n",
+    "x_min -= 0.05 * x_diff\n",
+    "x_max += 0.05 * x_diff\n",
+    "y_min -= 0.05 * y_diff\n",
+    "y_max += 0.05 * y_diff\n",
     "X, Y = jnp.meshgrid(\n",
-    "    jnp.linspace(1.66**2, 2.18**2, num=resolution),\n",
-    "    jnp.linspace(1.4**2, 1.93**2, num=resolution),\n",
-    ")\n",
-    "dalitz_data[\"sigma3\"] = X\n",
-    "dalitz_data[\"sigma2\"] = Y"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "The remaining Mandelstam variable can be expressed in terms of the others as follows:"
+    "    jnp.linspace(x_min, x_max, num=resolution),\n",
+    "    jnp.linspace(y_min, y_max, num=resolution),\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "mystnb": {
+     "code_prompt_show": "Create data converter for Dalitz coordinates"
+    },
     "tags": [
      "hide-input"
     ]
    },
    "outputs": [],
    "source": [
-    "(s1, s1_expr), *_ = model.invariants.items()\n",
-    "Latex(aslatex({s1: s1_expr}))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "That completes the data sample over which we want to evaluate the intensity model defined above:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "sigma1_func = perform_cached_lambdify(s1_expr, backend=\"jax\")\n",
-    "dalitz_data[\"sigma1\"] = sigma1_func(dalitz_data)\n",
-    "dalitz_data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "We can now extend the sample with angle definitions so that we have a data sample over which the intensity can be evaluated."
+    "definitions = dict(model.variables)\n",
+    "definitions[σk] = σk_expr\n",
+    "definitions = {\n",
+    "    symbol: expr.xreplace(definitions).xreplace(model.masses)\n",
+    "    for symbol, expr in definitions.items()\n",
+    "}\n",
+    "data_transformer = SympyDataTransformer.from_sympy(definitions, backend=\"jax\")\n",
+    "dalitz_data = {\n",
+    "    f\"sigma{i}\": X,\n",
+    "    f\"sigma{j}\": Y,\n",
+    "}\n",
+    "dalitz_data.update(data_transformer(dalitz_data))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "angle_data = masses_to_angles(dalitz_data)\n",
-    "dalitz_data.update(angle_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "remove-input"
     ]
    },
    "outputs": [],
    "source": [
-    "for k, v in dalitz_data.items():\n",
-    "    assert not jnp.all(jnp.isnan(v)), f\"All values for {k} are NaN\""
+    "for key, array in dalitz_data.items():\n",
+    "    assert not jnp.all(jnp.isnan(array)), f\"All values for {key} are NaN\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "jupyter": {
+     "source_hidden": true
+    },
+    "mystnb": {
+     "code_prompt_show": "Prepare parametrized numerical function"
+    },
+    "tags": [
+     "hide-input"
+    ]
    },
    "outputs": [],
    "source": [
+    "unfolded_intensity_expr = perform_cached_doit(model.intensity)\n",
+    "full_intensity_expr = perform_cached_doit(\n",
+    "    unfolded_intensity_expr.xreplace(model.amplitudes)\n",
+    ")\n",
     "free_parameters = {\n",
     "    k: v\n",
     "    for k, v in model.parameter_defaults.items()\n",
@@ -495,7 +397,33 @@
     "    full_intensity_expr.xreplace(fixed_parameters),\n",
     "    parameters=free_parameters,\n",
     "    backend=\"jax\",\n",
-    ")"
+    ")\n",
+    "intensities = intensity_func(dalitz_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "remove-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "assert not jnp.all(jnp.isnan(intensities)), \"All intensities are NaN\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Dalitz plot"
    ]
   },
   {
@@ -524,19 +452,25 @@
    },
    "outputs": [],
    "source": [
+    "def get_decay_products(subsystem_id: int) -> tuple[State, State]:\n",
+    "    return tuple(s for s in DECAY.final_state.values() if s.index != subsystem_id)\n",
+    "\n",
+    "\n",
     "plt.rc(\"font\", size=18)\n",
-    "intensities = intensity_func(dalitz_data)\n",
     "I_tot = jnp.nansum(intensities)\n",
     "normalized_intensities = intensities / I_tot\n",
-    "assert not jnp.all(jnp.isnan(normalized_intensities)), \"All intensities are NaN\"\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(14, 10))\n",
     "mesh = ax.pcolormesh(X, Y, normalized_intensities)\n",
     "ax.set_aspect(\"equal\")\n",
     "c_bar = plt.colorbar(mesh, ax=ax, pad=0.01)\n",
     "c_bar.ax.set_ylabel(\"Normalized intensity (a.u.)\")\n",
-    "ax.set_xlabel(R\"$\\sigma_3 = M^2\\left(K^0\\Sigma^+\\right)$\")\n",
-    "ax.set_ylabel(R\"$\\sigma_2 = M^2\\left(K^0\\bar{p}\\right)$\")\n",
+    "sigma_labels = {\n",
+    "    i: Rf\"$\\sigma_{i} = M^2\\left({' '.join(p.latex for p in get_decay_products(i))}\\right)$\"\n",
+    "    for i in (1, 2, 3)\n",
+    "}\n",
+    "ax.set_xlabel(sigma_labels[i])\n",
+    "ax.set_ylabel(sigma_labels[j])\n",
     "plt.show()"
    ]
   },
@@ -597,33 +531,30 @@
     "    ax.set_ylim(0, y_max)\n",
     "    ax.autoscale(enable=False, axis=\"x\")\n",
     "ax1.set_ylabel(\"Normalized intensity (a.u.)\")\n",
-    "ax1.set_xlabel(R\"$M\\left(K^0\\Sigma^+\\right)$\")\n",
-    "ax2.set_xlabel(R\"$M\\left(K^0\\bar{p}\\right)$\")\n",
-    "i1, i2 = 0, 0\n",
+    "ax1.set_xlabel(sigma_labels[i])\n",
+    "ax2.set_xlabel(sigma_labels[j])\n",
+    "resonance_counter1, resonance_counter2 = 0, 0\n",
     "for chain in tqdm(model.decay.chains, disable=NO_TQDM):\n",
     "    resonance = chain.resonance\n",
-    "    decay_product = {p.name for p in chain.decay_products}\n",
-    "    if decay_product == {\"K0\", \"Sigma+\"}:\n",
+    "    if set(chain.decay_products) == set(get_decay_products(subsystem_id=i)):\n",
     "        ax = ax1\n",
-    "        i1 += 1\n",
-    "        i = i1\n",
+    "        resonance_counter1 += 1\n",
+    "        color = f\"C{resonance_counter1}\"\n",
     "        projection_axis = 0\n",
     "        x_data = x\n",
-    "    elif decay_product == {\"K0\", \"p~\"}:\n",
+    "    elif set(chain.decay_products) == set(get_decay_products(subsystem_id=j)):\n",
     "        ax = ax2\n",
-    "        i2 += 1\n",
-    "        i = i2\n",
+    "        resonance_counter2 += 1\n",
+    "        color = f\"C{resonance_counter2}\"\n",
     "        projection_axis = 1\n",
     "        x_data = y\n",
     "    else:\n",
-    "        continue\n",
+    "        raise NotImplementedError\n",
     "    sub_intensities = compute_sub_intensity(\n",
     "        intensity_func, dalitz_data, resonance.latex\n",
     "    )\n",
-    "    ax.plot(\n",
-    "        x_data, jnp.nansum(sub_intensities / I_tot, axis=projection_axis), c=f\"C{i}\"\n",
-    "    )\n",
-    "    ax.axvline(resonance.mass, label=f\"${resonance.latex}$\", c=f\"C{i}\", ls=\"dashed\")\n",
+    "    ax.plot(x_data, jnp.nansum(sub_intensities / I_tot, axis=projection_axis), c=color)\n",
+    "    ax.axvline(resonance.mass, label=f\"${resonance.latex}$\", c=color, ls=\"dashed\")\n",
     "for ax in axes:\n",
     "    ax.legend(fontsize=12)\n",
     "plt.show()"
