ENH: formulate amplitudes for existing subsystems only

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -191,7 +191,7 @@
     "    model_builder.dynamics_choices.register_builder(\n",
     "        chain, formulate_breit_wigner_with_form_factor\n",
     "    )\n",
-    "model = model_builder.formulate(reference_subsystem=1)\n",
+    "model = model_builder.formulate(reference_subsystem=2)\n",
     "model.intensity"
    ]
   },
@@ -230,7 +230,7 @@
    },
    "outputs": [],
    "source": [
-    "Latex(aslatex({k: v for k, v in model.amplitudes.items() if v}))"
+    "Latex(aslatex(model.amplitudes))"
    ]
   },
   {
