--- a/docs/xib2pkk.ipynb
+++ b/docs/xib2pkk.ipynb
@@ -256,7 +256,7 @@
    },
    "outputs": [],
    "source": [
-    "Latex(aslatex({k: v for k, v in model.amplitudes.items() if v}))"
+    "Latex(aslatex(model.amplitudes))"
    ]
   },
   {
