--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -26,8 +26,6 @@
    "source": [
     "from __future__ import annotations\n",
     "\n",
-    "import warnings\n",
-    "\n",
     "import graphviz\n",
     "import qrules\n",
     "import sympy as sp\n",
@@ -44,8 +42,7 @@
     "from ampform_dpd.dynamics.builder import create_mass_symbol, get_mandelstam_s\n",
     "from ampform_dpd.io import as_markdown_table, aslatex, simplify_latex_rendering\n",
     "\n",
-    "simplify_latex_rendering()\n",
-    "warnings.simplefilter(\"ignore\")"
+    "simplify_latex_rendering()"
    ]
   },
   {
