--- a/docs/comparison/d2kkk.ipynb
+++ b/docs/comparison/d2kkk.ipynb
@@ -84,7 +84,7 @@
     "simplify_latex_rendering()\n",
     "logging.getLogger(\"jax\").setLevel(logging.ERROR)  # mute JAX\n",
     "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"  # mute TF\n",
-    "warnings.simplefilter(\"ignore\")\n",
+    "warnings.simplefilter(\"ignore\", category=RuntimeWarning)\n",
     "NO_TQDM = \"EXECUTE_NB\" in os.environ\n",
     "if NO_TQDM:\n",
     "    logging.getLogger(\"ampform.sympy\").setLevel(logging.ERROR)\n",
