ENH: formulate amplitudes for existing subsystems only (#127)
* DOC: catch only `RuntimeWarning`s
* ENH: raise warning if subsystem does not exist
* ENH: warn if wrong reference subsystem is chosen
* MAINT: simplify `get_subsystem()` implementation

--- a/docs/xib2pkk.ipynb
+++ b/docs/xib2pkk.ipynb
@@ -63,7 +63,7 @@
     "\n",
     "simplify_latex_rendering()\n",
     "logging.getLogger(\"absl\").setLevel(logging.ERROR)  # mute JAX\n",
-    "warnings.simplefilter(\"ignore\")\n",
+    "warnings.simplefilter(\"ignore\", category=RuntimeWarning)\n",
     "\n",
     "NO_TQDM = \"EXECUTE_NB\" in os.environ\n",
     "if NO_TQDM:\n",
@@ -256,7 +256,7 @@
    },
    "outputs": [],
    "source": [
-    "Latex(aslatex({k: v for k, v in model.amplitudes.items() if v}))"
+    "Latex(aslatex(model.amplitudes))"
    ]
   },
   {
