--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "simplify_latex_rendering()\n",
     "logging.getLogger(\"absl\").setLevel(logging.ERROR)  # mute JAX\n",
-    "warnings.simplefilter(\"ignore\")\n",
+    "warnings.simplefilter(\"ignore\", category=RuntimeWarning)\n",
     "\n",
     "NO_TQDM = \"EXECUTE_NB\" in os.environ\n",
     "if NO_TQDM:\n",
@@ -191,7 +191,7 @@
     "    model_builder.dynamics_choices.register_builder(\n",
     "        chain, formulate_breit_wigner_with_form_factor\n",
     "    )\n",
-    "model = model_builder.formulate(reference_subsystem=1)\n",
+    "model = model_builder.formulate(reference_subsystem=2)\n",
     "model.intensity"
    ]
   },
@@ -230,7 +230,7 @@
    },
    "outputs": [],
    "source": [
-    "Latex(aslatex({k: v for k, v in model.amplitudes.items() if v}))"
+    "Latex(aslatex(model.amplitudes))"
    ]
   },
   {
