DOC: load kinematics section

--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -25,7 +25,7 @@
     "import json\n",
     "\n",
     "with open(\"Lc2ppiK.json\") as stream:\n",
-    "    model_definition = json.load(stream)"
+    "    model_def = json.load(stream)"
    ]
   },
   {
@@ -43,7 +43,27 @@
    "source": [
     "from IPython.display import JSON\n",
     "\n",
-    "JSON(model_definition)"
+    "JSON(model_def)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kinematics_def = model_def[\"distributions\"][0][\"decay_description\"][\"kinematics\"]\n",
+    "kinematics_def"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "initial_state_def = kinematics_def[\"initial_state\"]\n",
+    "final_state_def = kinematics_def[\"final_state\"]"
    ]
   }
  ],
